feat:  task - correção build testes